# cooppad

./: .gitignore  Anchor Program spec  Platform fullstack spec  coop  meteora  package-lock.json  package.json
.devcontainer/: devcontainer.json  post-create.sh
legacy-solana-presale/: README.md
legacy-solana-presale/components/: BuyWidget.tsx  HomePresaleExplorer.tsx  LaunchForm.tsx  PresaleAvatar.tsx  PresaleCard.tsx  ProgressBar.tsx  TransactionToast.tsx  WalletProvider.tsx
legacy-solana-presale/hooks/: usePresale.ts
legacy-solana-presale/lib/: anchor.ts  decodePresaleAccount.ts  instructions.ts  pda.ts  presaleConstants.ts  presaleLaunch.ts  presaleListDto.ts  presaleListing.ts  presaleTokens.ts  sendTransaction.ts
legacy-solana-presale/scripts/: meteora-dammv2-devnet.cjs  mine-mint-pool-worker.cjs  mine-mint-pool.cjs
legacy-solana-presale/types/: index.ts
moonpad/: .env.example  .gitignore  Anchor.toml  Cargo.toml  DEPLOY.md  SCANNER-SUBMISSION.md  instrumentation.ts  next.config.mjs  package-lock.json  package.json  railway.json  rust-toolchain.toml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
moonpad/app/: globals.css  layout.tsx  page.tsx
moonpad/components/: AppHeader.tsx  BuyWidget.tsx  CoopRightRail.tsx  CoopShell.tsx  CoopSidebar.tsx  CoopTopBar.tsx  DocShell.tsx  EvmProvider.tsx  LaunchForm.tsx  PresaleCard.tsx  ProgressBar.tsx  ThemeToggle.tsx  TransactionToast.tsx
moonpad/evm/: .env.example  .gitignore  README.md  foundry.toml
moonpad/hooks/: useContribution.ts  useCountdown.ts  usePresale.ts
moonpad/lib/: anchor.ts  instructions.ts  pda.ts  presaleConstants.ts  presaleEncoding.ts  (+1 more)
moonpad/programs/moonpad/: Cargo.toml
moonpad/programs/moonpad/src/: claim_pool_fees.rs  claim_refund.rs  claim_tokens.rs  collect_my_fees.rs  constants.rs  contribute.rs  crate_accounts.rs  enable_refund.rs  errors.rs  events.rs  initialize_presale.rs  launch_presale.rs  lib.rs  register_meteora_pool.rs  sweep_lp_for_meteora.rs  withdraw_contribution.rs
moonpad/programs/moonpad/src/state/: contribution_state.rs  mod.rs  presale_state.rs
(+108 files in other folders)
